# kay_discord_bot

./: Cargo.toml  Dockerfile  compose.prod.yml  compose.yaml  compose.yml  flake.nix
.github/workflows/: publish.yml
src/: commands.rs  main.rs  utils.rs
src/commands/: mod.rs  now_playing.rs  play.rs  queue.rs  skip.rs  stop.rs
src/utils/: macros.rs  mod.rs  musics.rs
