[package]
name = "kay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
poise = "0.6.1"
reqwest = "0.12.23"
serenity = { version = "0.12.4", features = ["voice"] }
songbird = { version = "0.5.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
